# newsletter

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  prek.toml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  send.yml
infra/: app.py
infra/stacks/: newsletter_stack.py
src/nf_core_newsletter/: config.py  content.py  emails.py  responses.py  secrets.py  ses.py  tokens.py
src/nf_core_newsletter/handlers/: confirm.py  send.py  subscribe.py
tests/: conftest.py  test_config.py  test_confirm.py  test_content.py  test_send.py  test_subscribe.py  test_tokens.py
