[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nf-core-newsletter"
version = "0.1.0"
description = "Distribution service for the nf-core monthly newsletter (email via Amazon SES)"
requires-python = ">=3.12"
# Runtime deps are intentionally minimal: the Lambda handlers use only boto3
# (provided by the Lambda runtime) and the stdlib. boto3 is listed for local
# dev / type checking and is NOT bundled into the deployment package.
dependencies = [
    "boto3>=1.35,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "ruff>=0.8,<1",
    "mypy>=1.13,<2",
    "boto3-stubs[sesv2,ssm]>=1.35,<2",
]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/nf_core_newsletter"]
